--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^24.10.1",
